Fix avatars flickering

--- a/src/components/avatar/_avatar.scss
+++ b/src/components/avatar/_avatar.scss
@@ -19,6 +19,7 @@ $includeHtml: false !default;
     height: $avatarMediumSize;
     border-radius: 50%;
     background: $avatarDefaultBackgroundColor;
+    z-index: 0;
 
     &__image {
       position: relative;
